@@ -9,10 +9,14 @@ import net.minecraft.network.codec.ByteBufCodecs;
 import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.network.protocol.common.custom.CustomPacketPayload;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.server.MinecraftServer;
 import net.minecraft.server.level.ServerPlayer;
 import net.neoforged.neoforge.network.handling.IPayloadContext;
 import org.slf4j.Logger;
+
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
+import java.util.Objects;
 
 /**
  * 配方黑名单操作网络包
@@ -23,10 +27,22 @@ import org.slf4j.Logger;
 public record RecipeBlacklistPacket(
         Operation operation,
         String recipeId,                   // 对于 ADD/REMOVE 操作
-        java.util.List<String> recipeIds   // 对于 ADD_BATCH/REMOVE_BATCH 操作
+        List<String> recipeIds              // 对于 ADD_BATCH/REMOVE_BATCH 操作
 ) implements CustomPacketPayload {
 
     private static final Logger LOGGER = LogUtils.getLogger();
+    public static final int MAX_BATCH_SIZE = NetworkProtocolLimits.MAX_BLACKLIST_BATCH_SIZE;
+
+    public RecipeBlacklistPacket {
+        operation = Objects.requireNonNull(operation, "operation");
+        recipeId = recipeId == null ? "" : recipeId;
+        recipeIds = recipeIds == null ? List.of() : List.copyOf(recipeIds);
+        NetworkProtocolLimits.validateString(
+                recipeId, "recipeId", NetworkProtocolLimits.MAX_RECIPE_ID_LENGTH);
+        if (recipeIds.size() > MAX_BATCH_SIZE) {
+            throw new IllegalArgumentException("recipeIds exceeds the protocol limit of " + MAX_BATCH_SIZE);
+        }
+    }
 
     public enum Operation {
         ADD,          // 添加到黑名单
@@ -37,16 +53,16 @@ public record RecipeBlacklistPacket(
     }
 
     public RecipeBlacklistPacket(Operation operation, String recipeId) {
-        this(operation, recipeId != null ? recipeId : "", java.util.Collections.emptyList());
+        this(operation, recipeId != null ? recipeId : "", List.of());
     }
 
     public RecipeBlacklistPacket(Operation operation) {
         this(operation, "");
     }
 
-    public RecipeBlacklistPacket(Operation operation, java.util.Collection<String> recipeIds) {
+    public RecipeBlacklistPacket(Operation operation, Collection<String> recipeIds) {
         this(operation, "",
-                new java.util.ArrayList<>(recipeIds != null ? recipeIds : java.util.Collections.emptyList()));
+                new ArrayList<>(recipeIds != null ? recipeIds : List.of()));
     }
 
     public static final Type<RecipeBlacklistPacket> TYPE =
@@ -54,16 +70,23 @@ public record RecipeBlacklistPacket(
                     ResourceLocation.fromNamespaceAndPath(ModMain.MODID, "recipe_blacklist")
             );
 
-    private static final StreamCodec<ByteBuf, java.util.List<String>> STRING_LIST_CODEC =
-            ByteBufCodecs.STRING_UTF8.apply(ByteBufCodecs.list());
+    private static final StreamCodec<ByteBuf, String> RECIPE_ID_CODEC =
+            NetworkProtocolLimits.string(NetworkProtocolLimits.MAX_RECIPE_ID_LENGTH);
+    private static final StreamCodec<ByteBuf, List<String>> STRING_LIST_CODEC =
+            NetworkProtocolLimits.list(RECIPE_ID_CODEC, MAX_BATCH_SIZE);
 
     public static final StreamCodec<ByteBuf, RecipeBlacklistPacket> STREAM_CODEC =
             new StreamCodec<>() {
                 @Override
                 public RecipeBlacklistPacket decode(ByteBuf buf) {
-                    Operation operation = Operation.values()[ByteBufCodecs.VAR_INT.decode(buf)];
-                    String recipeId = ByteBufCodecs.STRING_UTF8.decode(buf);
-                    java.util.List<String> ids = STRING_LIST_CODEC.decode(buf);
+                    int ordinal = ByteBufCodecs.VAR_INT.decode(buf);
+                    if (ordinal < 0 || ordinal >= Operation.values().length) {
+                        throw new io.netty.handler.codec.DecoderException(
+                                "Invalid blacklist operation: " + ordinal);
+                    }
+                    Operation operation = Operation.values()[ordinal];
+                    String recipeId = RECIPE_ID_CODEC.decode(buf);
+                    List<String> ids = STRING_LIST_CODEC.decode(buf);
                     if (operation == Operation.ADD_BATCH || operation == Operation.REMOVE_BATCH) {
                         return new RecipeBlacklistPacket(operation, ids);
                     }
@@ -73,7 +96,7 @@ public record RecipeBlacklistPacket(
                 @Override
                 public void encode(ByteBuf buf, RecipeBlacklistPacket packet) {
                     ByteBufCodecs.VAR_INT.encode(buf, packet.operation().ordinal());
-                    ByteBufCodecs.STRING_UTF8.encode(buf, packet.recipeId());
+                    RECIPE_ID_CODEC.encode(buf, packet.recipeId());
                     STRING_LIST_CODEC.encode(buf, packet.recipeIds());
                 }
             };
@@ -93,7 +116,8 @@ public record RecipeBlacklistPacket(
 
             // 检查权限（需要OP权限）
             if (!player.hasPermissions(2)) {
-                player.sendSystemMessage(Component.literal("§c你没有权限执行此操作"));
+                player.sendSystemMessage(Component.translatable("registerhelper.recipe.permission_denied")
+                        .withStyle(net.minecraft.ChatFormatting.RED));
                 LOGGER.warn("玩家 {} 尝试操作黑名单但没有权限", player.getName().getString());
                 return;
             }
@@ -113,7 +137,8 @@ public record RecipeBlacklistPacket(
 
     private void handleAdd(ServerPlayer player) {
         if (recipeId.isEmpty()) {
-            player.sendSystemMessage(Component.literal("§c配方ID为空"));
+            player.sendSystemMessage(Component.translatable("registerhelper.recipe.id.empty")
+                    .withStyle(net.minecraft.ChatFormatting.RED));
             return;
         }
 
@@ -122,20 +147,26 @@ public record RecipeBlacklistPacket(
             boolean success = RecipeBlacklistManager.addToBlacklist(id);
 
             if (success) {
-                player.sendSystemMessage(Component.literal("§a配方已添加到黑名单: " + recipeId));
+                player.sendSystemMessage(Component.translatable(
+                        "registerhelper.recipe.blacklist.added", recipeId)
+                        .withStyle(net.minecraft.ChatFormatting.GREEN));
                 LOGGER.info("玩家 {} 将配方 {} 添加到黑名单", player.getName().getString(), recipeId);
             } else {
-                player.sendSystemMessage(Component.literal("§e配方已在黑名单中: " + recipeId));
+                player.sendSystemMessage(Component.translatable(
+                        "registerhelper.recipe.blacklist.already", recipeId)
+                        .withStyle(net.minecraft.ChatFormatting.YELLOW));
             }
         } catch (Exception e) {
-            player.sendSystemMessage(Component.literal("§c无效的配方ID: " + recipeId));
+            player.sendSystemMessage(Component.translatable("registerhelper.recipe.id.invalid", recipeId)
+                    .withStyle(net.minecraft.ChatFormatting.RED));
             LOGGER.error("添加配方到黑名单失败: {}", recipeId, e);
         }
     }
 
     private void handleRemove(ServerPlayer player) {
         if (recipeId.isEmpty()) {
-            player.sendSystemMessage(Component.literal("§c配方ID为空"));
+            player.sendSystemMessage(Component.translatable("registerhelper.recipe.id.empty")
+                    .withStyle(net.minecraft.ChatFormatting.RED));
             return;
         }
 
@@ -144,20 +175,27 @@ public record RecipeBlacklistPacket(
             boolean success = RecipeBlacklistManager.removeFromBlacklist(id);
 
             if (success) {
-                player.sendSystemMessage(Component.literal("§a配方已从黑名单移除: " + recipeId));
+                player.sendSystemMessage(Component.translatable(
+                        "registerhelper.recipe.blacklist.removed", recipeId)
+                        .withStyle(net.minecraft.ChatFormatting.GREEN));
                 LOGGER.info("玩家 {} 将配方 {} 从黑名单移除", player.getName().getString(), recipeId);
             } else {
-                player.sendSystemMessage(Component.literal("§e配方不在黑名单中: " + recipeId));
+                player.sendSystemMessage(Component.translatable(
+                        "registerhelper.recipe.blacklist.not_found", recipeId)
+                        .withStyle(net.minecraft.ChatFormatting.YELLOW));
             }
         } catch (Exception e) {
-            player.sendSystemMessage(Component.literal("§c无效的配方ID: " + recipeId));
+            player.sendSystemMessage(Component.translatable("registerhelper.recipe.id.invalid", recipeId)
+                    .withStyle(net.minecraft.ChatFormatting.RED));
             LOGGER.error("从黑名单移除配方失败: {}", recipeId, e);
         }
     }
 
     private void handleAddBatch(ServerPlayer player) {
         if (recipeIds.isEmpty()) {
-            player.sendSystemMessage(Component.literal("§c批量添加列表为空"));
+            player.sendSystemMessage(Component.translatable(
+                    "registerhelper.recipe.blacklist.batch_add.empty")
+                    .withStyle(net.minecraft.ChatFormatting.RED));
             return;
         }
         java.util.Set<ResourceLocation> ids = new java.util.HashSet<>();
@@ -169,13 +207,17 @@ public record RecipeBlacklistPacket(
             }
         }
         int added = RecipeBlacklistManager.addMultipleToBlacklist(ids);
-        player.sendSystemMessage(Component.literal("§a批量添加完成: 新增 " + added + " 个，提交 " + ids.size() + " 个"));
+        player.sendSystemMessage(Component.translatable(
+                "registerhelper.recipe.blacklist.batch_add.completed", added, ids.size())
+                .withStyle(net.minecraft.ChatFormatting.GREEN));
         LOGGER.info("玩家 {} 批量添加 {} 个配方到黑名单", player.getName().getString(), added);
     }
 
     private void handleRemoveBatch(ServerPlayer player) {
         if (recipeIds.isEmpty()) {
-            player.sendSystemMessage(Component.literal("§c批量移除列表为空"));
+            player.sendSystemMessage(Component.translatable(
+                    "registerhelper.recipe.blacklist.batch_remove.empty")
+                    .withStyle(net.minecraft.ChatFormatting.RED));
             return;
         }
         java.util.Set<ResourceLocation> ids = new java.util.HashSet<>();
@@ -187,7 +229,9 @@ public record RecipeBlacklistPacket(
             }
         }
         int removed = RecipeBlacklistManager.removeMultipleFromBlacklist(ids);
-        player.sendSystemMessage(Component.literal("§a批量移除完成: 移除 " + removed + " 个，提交 " + ids.size() + " 个"));
+        player.sendSystemMessage(Component.translatable(
+                "registerhelper.recipe.blacklist.batch_remove.completed", removed, ids.size())
+                .withStyle(net.minecraft.ChatFormatting.GREEN));
         LOGGER.info("玩家 {} 批量移除 {} 个黑名单配方", player.getName().getString(), removed);
     }
 
@@ -196,10 +240,14 @@ public record RecipeBlacklistPacket(
         boolean success = RecipeBlacklistManager.clearBlacklist();
 
         if (success) {
-            player.sendSystemMessage(Component.literal("§a黑名单已清空，移除了 " + count + " 个配方"));
+            player.sendSystemMessage(Component.translatable(
+                    "registerhelper.recipe.blacklist.cleared", count)
+                    .withStyle(net.minecraft.ChatFormatting.GREEN));
             LOGGER.info("玩家 {} 清空了黑名单（{} 个配方）", player.getName().getString(), count);
         } else {
-            player.sendSystemMessage(Component.literal("§c清空黑名单失败"));
+            player.sendSystemMessage(Component.translatable(
+                    "registerhelper.recipe.blacklist.clear_failed")
+                    .withStyle(net.minecraft.ChatFormatting.RED));
         }
     }
 }
